--- a/Blog/socialblog/templates/info.html
+++ b/Blog/socialblog/templates/info.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %
+{% extends "base.html" %}
 {% block content %}
     <div class="jumbotron">
         <h1>Info about our company</h1>
